--- a/CPSC-250/CPSC-250.vcxproj
+++ b/CPSC-250/CPSC-250.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{fe2b5702-a4d0-4ab7-a7f1-d6baf4ba76d7}</ProjectGuid>
+    <ProjectGuid>{3599DBA9-47AF-43EF-86D6-7850ED4DA62E}</ProjectGuid>
     <RootNamespace>CSPC250</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>CPSC-250</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
