--- a/CPSC-250/CPSC-250.vcxproj
+++ b/CPSC-250/CPSC-250.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MatrixGraph.cpp" />
+    <ClCompile Include="ListGraph.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
